{
  "version": 4,
  "terraform_version": "1.6.3",
  "serial": 937,
  "lineage": "ac175129-22b1-a865-36de-89c66a73e645",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "hub_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:447568380028:vpc/vpc-0e06b9cf919b3066c",
            "cidr_block": "172.17.42.0/24",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-025abb338e44f7083",
                "cidr_block": "172.17.42.0/24",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-09be6c31f24423402",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e06b9cf919b3066c",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-09d970f0ca939a63d",
            "owner_id": "447568380028",
            "tags": {
              "Name": "SIG_hub"
            }
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "spoke_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:447568380028:vpc/vpc-0617694a8fa9d7cbd",
            "cidr_block": "192.168.136.0/24",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-030c6aab5293cd3f0",
                "cidr_block": "192.168.136.0/24",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-09be6c31f24423402",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0617694a8fa9d7cbd",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-012272bac5f147c2b",
            "owner_id": "447568380028",
            "tags": {
              "Name": "SIG_spoke"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "SIG_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:447568380028:internet-gateway/igw-05171cdd31f6a5199",
            "id": "igw-05171cdd31f6a5199",
            "owner_id": "447568380028",
            "tags": {
              "Name": "SIG_igw"
            },
            "tags_all": {
              "Name": "SIG_igw"
            },
            "vpc_id": "vpc-0617694a8fa9d7cbd"
          },
          "dependencies": [
            "aws_vpc.SIG_spoke"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "hub_to_spoke",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "192.168.136.0/24",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-09d970f0ca939a63d129650253",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-09d970f0ca939a63d",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-0cb4744df096ff673"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.SIG_hub",
            "aws_vpc.SIG_spoke",
            "aws_vpc_peering_connection.SIG_spoke_and_hub"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "spoke_to_hub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "172.17.42.0/24",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-012272bac5f147c2b191045509",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-012272bac5f147c2b",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-0cb4744df096ff673"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.SIG_hub",
            "aws_vpc.SIG_spoke",
            "aws_vpc_peering_connection.SIG_spoke_and_hub"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "spoke_to_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-05171cdd31f6a5199",
            "id": "r-rtb-012272bac5f147c2b1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-012272bac5f147c2b",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.SIG_igw",
            "aws_vpc.SIG_spoke"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "hub_management_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a66cf3382fd03e3d",
            "route_table_id": "rtb-09d970f0ca939a63d",
            "subnet_id": "subnet-0cc6c6813fa060afa"
          },
          "dependencies": [
            "aws_subnet.SIG_management_subnet",
            "aws_vpc.SIG_hub",
            "data.aws_vpc.hub_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "spoke_production_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08466cee09ebccf42",
            "route_table_id": "rtb-012272bac5f147c2b",
            "subnet_id": "subnet-08f404e9b3ab9a5fc"
          },
          "dependencies": [
            "aws_subnet.SIG_production_subnet",
            "aws_vpc.SIG_spoke",
            "data.aws_vpc.spoke_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "SIG_hub_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:447568380028:security-group/sg-09633c9820a89e3d2",
            "description": "Security group for SIG EC2 instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09633c9820a89e3d2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "SIG-sg",
            "name_prefix": "",
            "owner_id": "447568380028",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0e06b9cf919b3066c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.SIG_hub"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "SIG_spoke_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:447568380028:security-group/sg-0fd33be9acd09e30f",
            "description": "Security group for SIG EC2 instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fd33be9acd09e30f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "SIG-sg",
            "name_prefix": "",
            "owner_id": "447568380028",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0617694a8fa9d7cbd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.SIG_spoke"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "SIG_management_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:447568380028:subnet/subnet-0cc6c6813fa060afa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "172.17.42.0/27",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cc6c6813fa060afa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "447568380028",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "SIG_management_subnet"
            },
            "tags_all": {
              "Name": "SIG_management_subnet"
            },
            "vpc_id": "vpc-0e06b9cf919b3066c"
          },
          "dependencies": [
            "aws_vpc.SIG_hub"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "SIG_production_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:447568380028:subnet/subnet-08f404e9b3ab9a5fc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "192.168.136.0/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08f404e9b3ab9a5fc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "447568380028",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "SIG_production_subnet"
            },
            "tags_all": {
              "Name": "SIG_production_subnet"
            },
            "vpc_id": "vpc-0617694a8fa9d7cbd"
          },
          "dependencies": [
            "aws_vpc.SIG_spoke"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "SIG_hub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:447568380028:vpc/vpc-0e06b9cf919b3066c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.17.42.0/24",
            "default_network_acl_id": "acl-0be4d0f106296f3d4",
            "default_route_table_id": "rtb-09d970f0ca939a63d",
            "default_security_group_id": "sg-0d7482849c013a691",
            "dhcp_options_id": "dopt-09be6c31f24423402",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e06b9cf919b3066c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09d970f0ca939a63d",
            "owner_id": "447568380028",
            "tags": {
              "Name": "SIG_hub"
            },
            "tags_all": {
              "Name": "SIG_hub"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "SIG_spoke",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:447568380028:vpc/vpc-0617694a8fa9d7cbd",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.136.0/24",
            "default_network_acl_id": "acl-0f751994f8274f738",
            "default_route_table_id": "rtb-012272bac5f147c2b",
            "default_security_group_id": "sg-013460423d6ee0659",
            "dhcp_options_id": "dopt-09be6c31f24423402",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0617694a8fa9d7cbd",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-012272bac5f147c2b",
            "owner_id": "447568380028",
            "tags": {
              "Name": "SIG_spoke"
            },
            "tags_all": {
              "Name": "SIG_spoke"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_peering_connection",
      "name": "SIG_spoke_and_hub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "pending-acceptance",
            "id": "pcx-0cb4744df096ff673",
            "peer_owner_id": "447568380028",
            "peer_region": "ap-south-1",
            "peer_vpc_id": "vpc-0e06b9cf919b3066c",
            "requester": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "tags": {
              "Name": "SIG_spoke_and_hub"
            },
            "tags_all": {
              "Name": "SIG_spoke_and_hub"
            },
            "vpc_id": "vpc-0617694a8fa9d7cbd"
          },
          "dependencies": [
            "aws_vpc.SIG_hub",
            "aws_vpc.SIG_spoke"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_peering_connection_accepter",
      "name": "SIG_spoke_and_hub_accepter",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "active",
            "accepter": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "auto_accept": true,
            "id": "pcx-0cb4744df096ff673",
            "peer_owner_id": "447568380028",
            "peer_region": "ap-south-1",
            "peer_vpc_id": "vpc-0e06b9cf919b3066c",
            "requester": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "tags": {
              "Name": "SIG_spoke_and_hub"
            },
            "tags_all": {
              "Name": "SIG_spoke_and_hub"
            },
            "vpc_id": "vpc-0617694a8fa9d7cbd",
            "vpc_peering_connection_id": "pcx-0cb4744df096ff673"
          },
          "dependencies": [
            "aws_vpc.SIG_hub",
            "aws_vpc.SIG_spoke",
            "aws_vpc_peering_connection.SIG_spoke_and_hub"
          ]
        }
      ]
    }
  ]
}